[package]
name = "diesel-async"
version = "0.1.0"
authors = ["Rasmus Kildevæld <rasmuskildevaeld@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
diesel = { version = "1.4", features = [ "r2d2" ] }
r2d2 = "0.8"
failure = "0.1"
futures-channel = { version = "0.3" }
rayon = "1"
pin-project = "0.4"


[features]
default = []
pg = ["diesel/postgres"]