[package]
name = "diesel-async"
version = "0.1.0"
authors = ["Rasmus Kildevæld <rasmuskildevaeld@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
diesel = { version = "1.4", features = [ "r2d2" ] }
r2d2 = "0.8"
futures-channel = { version = "0.3" }
pin-project-lite = "0.1"
threadpool = { git = "https://github.com/kildevaeld/rust-threadpool.git", version = "1.8.0" }


[features]
default = [ "pg" ]
pg = ["diesel/postgres"]